# nys

./: README.md  claudeignore  nys.metadata.json
.claude/: settings.local.json
NYS_Documentation/: Nkunziyenungu Smart Home DB.docx  Nkunziyenungu Smart Home ESP.docx  Nkunziyenungu Smart Home.docx  ~$unziyenungu Smart Home DB.docx
NYS_HW/: NYS_HW.eprj
nkunziyenugu_api/: .env  .env.production.example  .gitignore  composer.json
nkunziyenugu_api/app/Jobs/: ProcessDeviceMessageJob.php
nkunziyenugu_api/app/Mail/: OrderApproved.php  OrderPlaced.php  OrderQuestion.php  OrderRejected.php
nkunziyenugu_api/app/Models/: Account.php  AccountUser.php  AnimalBreed.php  AnimalDeviceLink.php  AuditLog.php  Device.php  DeviceMessage.php  Farm.php  User.php  (+19 more)
nkunziyenugu_api/bootstrap/: app.php
nkunziyenugu_api/config/: cors.php  devices.php  permissions_presets.php  permissions_registry.php  sanctum.php
nkunziyenugu_api/public/: .htaccess.production
nkunziyenugu_api/routes/: api.php
nkunziyenugu_systems/: .env.production  README.md  package-lock.json  package.json  vue.config.js
nkunziyenugu_systems/public/: index.html
nkunziyenugu_systems/scripts/: build-permissions-registry.js
nkunziyenugu_systems/src/: App.vue  main.js  permissions-registry.json
nys_app/: App.tsx  app.json  package-lock.json  package.json
nys_app/src/: permissions-registry.ts
nys_esp/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3
nys_esp/components/comms/: CMakeLists.txt  comms.c  comms.h
nys_esp/main/: CMakeLists.txt  esp32.c  gsm_test.c  main.c
(+251 files in other folders)
